--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcsh 'Detective and mystery stories'
 - !lcsh 'Scientists -- Juvenile fiction'
 - !lcc 'PZ'
+- GITenberg
 title: 'The Scarlet Lake Mystery: A Rick Brant Science-Adventure Story'
 url: http://www.gutenberg.org/ebooks/31581
